[gd_scene load_steps=9 format=2]

[ext_resource path="res://AI/AIOne/OneLeft/OneLeft.tscn" type="PackedScene" id=1]
[ext_resource path="res://AI/AIOne/OneFront/OneFront.tscn" type="PackedScene" id=2]
[ext_resource path="res://AI/AIOne/OneBack/OneBack.tscn" type="PackedScene" id=3]
[ext_resource path="res://AI/AIOne/OneRight/OneRight.tscn" type="PackedScene" id=4]
[ext_resource path="res://AI/AIOne/AIOne.gd" type="Script" id=5]
[ext_resource path="res://Items/Weapons/Guns/Epsilon/Epsilon.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0836

[sub_resource type="CircleShape2D" id=2]
radius = 142.546

[node name="AIOne" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="OneFront" parent="." instance=ExtResource( 2 )]

[node name="OneBack" parent="." instance=ExtResource( 3 )]
visible = false
scale = Vector2( 0.4, 0.4 )

[node name="OneLeft" parent="." instance=ExtResource( 1 )]
visible = false
scale = Vector2( 0.32, 0.4 )

[node name="OneRight" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 1, -2.5 )
scale = Vector2( 0.4, 0.48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Weapon" parent="." instance=ExtResource( 6 )]
position = Vector2( 43.0036, 1.12428 )
scale = Vector2( 0.3, 0.3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
